--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -103,10 +103,12 @@
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="100" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
-                            <mat-label>Broker</mat-label>
+                            <mat-label>Broker / Realty Firm</mat-label>
                             <mat-select [(value)]="trnSoldUnitModel.BrokerId" [disabled]="trnSoldUnitModel.IsLocked">
                                 <mat-option *ngFor="let mstBrokerObject of mstBrokerModel" [value]="mstBrokerObject.Id">
-                                    {{mstBrokerObject.FullName}}
+                                    {{mstBrokerObject.Type == "BROKER / SALES AGENT" ? mstBrokerObject.FullName + "
+                                    (BROKER / SALES AGENT)" :
+                                    mstBrokerObject.RealtyFirm + " (REALTY FIRM)"}}
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
