Customer and Sold Unit Changes

--- a/src/app/software/component/dashboard/dashboard.component.html
+++ b/src/app/software/component/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
                     src="../../../../assets/images//software-icons/broker.png" height="70"
                     style="margin-bottom: 7px;" />
                 <br />
-                Broker
+                Seller
             </button>
         </div>
     </div>
