--- a/src/app/software/software.component.html
+++ b/src/app/software/software.component.html
@@ -65,7 +65,7 @@
                             <a mat-list-item routerLink="/software/setup-broker-list"
                                 style="height: auto; padding: 10px 0px;">
                                 <img src="./../../assets/images/software-icons/broker.png" height="30" />
-                                &nbsp;&nbsp; Broker
+                                &nbsp;&nbsp; Seller
                             </a>
                             <a mat-list-item routerLink="/software/setup-checklist-list"
                                 style="height: auto; padding: 10px 0px;">
