--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -103,12 +103,12 @@
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="100" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
-                            <mat-label>Broker / Realty Firm</mat-label>
-                            <mat-select [(value)]="trnSoldUnitModel.BrokerId" [disabled]="trnSoldUnitModel.IsLocked">
+                            <mat-label>Realty Firm</mat-label>
+                            <mat-select [(value)]="trnSoldUnitModel.BrokerId" [disabled]="trnSoldUnitModel.IsLocked"
+                                (selectionChange)="realtyFirmChange($event)">
+                                <mat-option [value]=""></mat-option>
                                 <mat-option *ngFor="let mstBrokerObject of mstBrokerModel" [value]="mstBrokerObject.Id">
-                                    {{mstBrokerObject.Type == "BROKER / SALES AGENT" ? mstBrokerObject.FullName + "
-                                    (BROKER / SALES AGENT)" :
-                                    mstBrokerObject.RealtyFirm + " (REALTY FIRM)"}}
+                                    {{mstBrokerObject.RealtyFirm}}
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
@@ -118,15 +118,26 @@
                     <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Agent</mat-label>
-                            <input matInput [(ngModel)]="trnSoldUnitModel.Agent" [ngModelOptions]="{standalone: true}"
-                                [disabled]="trnSoldUnitModel.IsLocked">
+                            <mat-select [(value)]="trnSoldUnitModel.Agent" [disabled]="trnSoldUnitModel.IsLocked">
+                                <mat-option [value]=""></mat-option>
+                                <mat-option *ngFor="let mstBrokerModelAgentTypeObject of mstBrokerModelAgentType"
+                                    [value]="mstBrokerModelAgentTypeObject.FullName">
+                                    {{mstBrokerModelAgentTypeObject.FullName}}
+                                </mat-option>
+                            </mat-select>
                         </mat-form-field>
                     </div>
                     <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
-                            <mat-label>Broker Coordinator</mat-label>
-                            <input matInput [(ngModel)]="trnSoldUnitModel.BrokerCoordinator"
-                                [ngModelOptions]="{standalone: true}" [disabled]="trnSoldUnitModel.IsLocked">
+                            <mat-label>Broker</mat-label>
+                            <mat-select [(value)]="trnSoldUnitModel.BrokerCoordinator"
+                                [disabled]="trnSoldUnitModel.IsLocked">
+                                <mat-option [value]=""></mat-option>
+                                <mat-option *ngFor="let mstBrokerModelBrokerTypeObject of mstBrokerModelBrokerType"
+                                    [value]="mstBrokerModelBrokerTypeObject.FullName">
+                                    {{mstBrokerModelBrokerTypeObject.FullName}}
+                                </mat-option>
+                            </mat-select>
                         </mat-form-field>
                     </div>
                 </div>
