--- a/src/app/software/component/setup-unit-list/setup-unit-list.component.html
+++ b/src/app/software/component/setup-unit-list/setup-unit-list.component.html
@@ -73,7 +73,7 @@
                     </ng-container>
 
                     <ng-container matColumnDef="UnitPrice">
-                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Unit Price (Net of VAT)
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Total Selling Price
                         </mat-header-cell>
                         <mat-cell fxFlex="150px" *matCellDef="let row">
                             <div style="width: 100%; text-align: right; padding-right: 10px;">
