--- a/src/app/software/component/setup-broker-list/setup-broker-list.component.html
+++ b/src/app/software/component/setup-broker-list/setup-broker-list.component.html
@@ -63,13 +63,33 @@
                         </mat-cell>
                     </ng-container>
 
-                    <ng-container matColumnDef="Address">
-                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Address </mat-header-cell>
+                    <ng-container matColumnDef="EmailAddress">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Email Address
+                        </mat-header-cell>
                         <mat-cell fxFlex="200px" *matCellDef="let row">
-                            {{row.Type == 'AGENT' || row.Type == 'BROKER' ? row.Address : row.RealtyFirmAddress}}
+                            {{row.Type == 'AGENT' || row.Type == 'BROKER' ? row.EmailAddress :
+                            row.RealtyFirmEmailAddress}}
                         </mat-cell>
                     </ng-container>
-                    
+
+                    <ng-container matColumnDef="TelephoneNumber">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Telephone Number
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row">
+                            {{row.Type == 'AGENT' || row.Type == 'BROKER' ? row.TelephoneNumber :
+                            row.RealtyFirmTelephoneNumber}}
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="MobileNumber">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Mobile Number
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row">
+                            {{row.Type == 'AGENT' || row.Type == 'BROKER' ? row.MobileNumber :
+                            row.RealtyFirmMobileNumber}}
+                        </mat-cell>
+                    </ng-container>
+
                     <ng-container matColumnDef="Type">
                         <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Type </mat-header-cell>
                         <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Type}} </mat-cell>
